--- a/aaas-api-finance/src/main/resources/application-pretest.yml
+++ b/aaas-api-finance/src/main/resources/application-pretest.yml
@@ -4,38 +4,16 @@ spring:
             enabled: true
         livereload:
             enabled: false 
-            
             application:
         name: ssf-finance
+
     jackson:
       serialization:
         fail-on-empty-beans: false
-
-#    datasource:
-#        url: jdbc:mysql://192.168.1.10/ssffinance?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false
-#        name:
-#        username: sa
-#        password: abcd1234
-#        maximum-pool-size: 2000
-#        hikari:
-#            data-source-properties:
-#                cachePrepStmts: true
-#                prepStmtCacheSize: 250
-#                prepStmtCacheSqlLimit: 2048
-#                useServerPrepStmts: true
-#    jpa:
-#        database-platform: org.hibernate.spatial.dialect.mysql.MySQLSpatialDialect
-#        database: MYSQL
-#        show_sql: true
-#        properties:
-#            hibernate.cache.use_second_level_cache: true
-#            hibernate.cache.use_query_cache: false
-#            hibernate.generate_statistics: true
- #           hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
     data:
         mongodb:
-            host: 192.168.1.10
-            port: 30005
+            host: localhost
+            port: 27017
             database: zhongzheng
 
 server:
@@ -46,7 +24,6 @@ grpc:
   asset-allocation:
     host: localhost
     port: 10021
-    
 application:
     swagger:
         title: SSF Platform API
@@ -60,12 +37,11 @@ application:
         licenseUrl:
 
 api-data-manager-url: http://localhost:10030
-        
+
 shellshellfish:
-  asset-allocation-url: "http://localhost:10020"
+  asset-allocation-url: http://localhost:10020
 
 management:
   endpoints:
     web:
       base-path: /
-    
