--- a/aaas-api-user-info/src/main/resources/application-pretest.yml
+++ b/aaas-api-user-info/src/main/resources/application-pretest.yml
@@ -4,7 +4,7 @@ logging:
   level:
     org.hibernate.SQL: info
     org.hibernate.type.descriptor.sql.BasicBinder: info
-    org.springframework.data: debug
+    org.springframework.data: info
 
 spring:
   data:
