--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/fundAndBaseInfo.yml
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/fundAndBaseInfo.yml
@@ -3,4 +3,4 @@ fund:
 base:
   code: all
 coinfund:
-  code: 001987.OF,400005.OF,000366.OF
+  code: 001987.OF,400005.OF,000366.OF,000647.OF,000709.OF,200103.OF
