--- a/aaas-mid-api/pom.xml
+++ b/aaas-mid-api/pom.xml
@@ -234,43 +234,22 @@
             </extension>
         </extensions>
         <plugins>
-            <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>fabric8-maven-plugin</artifactId>
-                <version>3.5.33</version>
-                <configuration>
-                    <resources>
-                        <labels>
-                            <all>
-                                <property>
-                                    <name>app</name>
-                                    <value>${artifactId}-${version}</value>
-                                </property>
-                                <property>
-                                    <name>hystrix.enabled</name>
-                                    <value>false</value>
-                                </property>
-                            </all>
-                        </labels>
-                    </resources>
-                    <enricher>
-                        <config>
-                            <spring-boot-health-check>
-                                <port>4444</port>
-                            </spring-boot-health-check>
-                        </config>
-                    </enricher>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>fmp</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+              <plugin>
+                 <groupId>io.fabric8</groupId>
+                        <artifactId>fabric8-maven-plugin</artifactId>
+                           <version>3.5.28</version>
+                           <configuration>
+                                 <composeFile>docker-compose.yml</composeFile>
+                           </configuration>
+                           <executions>
+                                 <execution>
+                                        <goals>
+                                               <goal>deploy</goal>
+                                 <goal> build </goal> 
+                               </goals>
+                                 </execution>
+                           </executions>
+                    </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
