--- a/aaas-api-user-info/src/main/resources/application-pretest.yml
+++ b/aaas-api-user-info/src/main/resources/application-pretest.yml
@@ -10,8 +10,8 @@ spring:
   data:
     mongodb:
       database: ssfui
-      host: 192.168.1.10
-      port: 30005
+      host: localhost
+      port: 27017
       zhongzheng: zhongzheng
       funds: funds
   jpa:
