--- a/aaas-api-user-info/src/main/resources/application-pretest.yml
+++ b/aaas-api-user-info/src/main/resources/application-pretest.yml
@@ -10,7 +10,7 @@ spring:
   data:
     mongodb:
       database: ssfui
-      host: localhost
+      host: 192.168.1.10
       port: 27017
       zhongzheng: zhongzheng
       funds: funds
