--- a/aaas-api-gateway/pom.xml
+++ b/aaas-api-gateway/pom.xml
@@ -30,7 +30,12 @@
 		<!--<artifactId>com.shellshellfish.bankaccount.grpc.api</artifactId>-->
 		<!--<version>1.0.0-SNAPSHOT</version>-->
 		<!--</dependency>-->
-
+		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.25.Final</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zuul</artifactId>
